--- a/hunt/package.json
+++ b/hunt/package.json
@@ -19,7 +19,8 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.10.1"
+    "react-native-screens": "^2.10.1",
+    "react-native-webview": "^10.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
